--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ ADD_EXECUTABLE(main
   src/comp_tree.c
   src/symbtable.c
   src/symt.c
+  src/crc16.c
 )
 TARGET_LINK_LIBRARIES(main ${FLEX_LIBRARIES})
 
