Added headers for semantics checks and fixed a couple issues with type definitions for functions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ ADD_EXECUTABLE(main
   src/comp_tree.c
   src/symbtable.c
   src/crc16.c
+  src/semantics.c
 )
 TARGET_LINK_LIBRARIES(main ${FLEX_LIBRARIES})
 
