Added new Module for Label and Temporaries control

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ ADD_EXECUTABLE(main
   src/crc16.c
   src/semantics.c
   src/iloc.c
+  src/generators.c
 )
 TARGET_LINK_LIBRARIES(main ${FLEX_LIBRARIES})
 
